--- a/package.json
+++ b/package.json
@@ -16,7 +16,9 @@
     "@mui/icons-material": "^5.15.19",
     "@mui/material": "^5.15.19",
     "@mui/styled-engine-sc": "6.0.0-alpha.18",
-    "prop-types": "^15.8.1",
+    "jotai": "^2.8.3",
+    "js-cookie": "^3.0.5",
+    "ky": "^1.3.0",
     "react": "^18.2.0",
     "react-dom": "^18.3.1",
     "react-router-dom": "6",
@@ -30,6 +32,7 @@
     "eslint-plugin-react": "^7.34.1",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.6",
+    "jasmine": "^5.1.0",
     "vite": "^5.2.0"
   }
 }
