--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
     "react": "^18.2.0",
     "react-dom": "^18.3.1",
     "react-router-dom": "6",
+    "react-scripts": "^5.0.1",
+    "react-toastify": "^10.0.5",
     "styled-components": "^6.1.11"
   },
   "devDependencies": {
