--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "jotai": "^2.8.3",
     "js-cookie": "^3.0.5",
     "ky": "^1.3.0",
+    "leaflet": "^1.9.4",
     "react": "^18.2.0",
     "react-dom": "^18.3.1",
     "react-router-dom": "6",
